Implement Security Manager and Smart Context System for Xencode
- Added Security Manager for comprehensive security protection including:
  - AST-based Python code analysis
  - Path sanitization and symlink detection
  - Malicious content validation
  - .git directory security layer
  - Commit message sanitization

- Introduced Smart Context System to manage conversation context and project awareness:
  - Scans project files for relevance
  - Analyzes file content and summarizes key elements
  - Maintains conversation context and relevance scoring
  - Provides context for queries with a summary of relevant files

--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,19 @@ ENV/
 .idea/
 *.swp
 *.swo
-.kiro
+*~
+
+# Project specific
+.xencode/
+*.backup
+*.log
+.ipynb_checkpoints/
+
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-
-# Kiro specs
-.kiro/
+# Temporary files
+*.tmp
+*.temp
+test.txt
