--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 requests>=2.25.0
 rich>=13.0.0
 prompt_toolkit>=3.0.0
+pytest>=7.0.0
+pytest-cov>=4.0.0
+mypy>=1.0.0
+ruff>=0.1.0
+black>=23.0.0
+pre-commit>=3.0.0
+bandit>=1.7.0
