--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,26 @@
+# Core dependencies
 requests>=2.25.0
 rich>=13.0.0
 prompt_toolkit>=3.0.0
+
+# Phase 2 dependencies
+psutil>=5.9.0
+PyYAML>=6.0.0
+tomli>=2.0.0; python_version < "3.11"
+tomli-w>=1.0.0
+aiofiles>=23.0.0
+aiohttp>=3.8.0
 
 # Development dependencies
 pytest>=7.0.0
 pytest-cov>=4.0.0
 pytest-mock>=3.10.0
+pytest-asyncio>=0.21.0
 mypy>=1.0.0
 ruff>=0.1.0
 black>=23.0.0
 pre-commit>=3.0.0
 types-requests>=2.25.0
-pytest>=7.0.0
-pytest-cov>=4.0.0
-mypy>=1.0.0
-ruff>=0.1.0
-black>=23.0.0
-pre-commit>=3.0.0
+types-PyYAML>=6.0.0
 bandit>=1.7.0
+safety>=2.3.0
