🚀 Phase 3.1: Plugin Architecture System Implementation
✨ Features Added:
• Comprehensive plugin management framework
• Dynamic plugin loading and lifecycle management
• Service registration and discovery system
• Event-driven plugin communication
• Plugin marketplace simulation
• Hot-loading and dependency management
• Secure plugin context with permissions

📦 New Files:
• xencode/plugin_system.py - Core plugin architecture (500+ lines)
• test_plugin_system_standalone.py - Comprehensive test suite
• demo_plugin_system_standalone.py - Interactive demonstration

🧪 Testing:
• 10/10 tests passing with full async support
• Comprehensive coverage of plugin lifecycle
• Service registration and event system validation
• Interactive demo with 3 example plugins

🏗️ Architecture:
• PluginManager: Central plugin orchestration
• PluginInterface: Standardized plugin API
• PluginContext: Secure service and event system
• PluginMarketplace: Plugin discovery and search

Phase 3.1 ✅ - Plugin Architecture System Complete

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,13 @@ addopts = [
     "--strict-config",
     "--verbose",
     "-ra",
+    "--asyncio-mode=auto",
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
+    "asyncio: marks tests as async tests",
 ]
 
 [tool.coverage.run]
