--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,30 @@ tomli-w>=1.0.0
 aiofiles>=23.0.0
 aiohttp>=3.8.0
 
+# Phase 3 dependencies for multi-modal processing
+PyMuPDF>=1.26.5
+python-docx>=1.2.0
+beautifulsoup4>=4.14.2
+tree-sitter>=0.25.2
+tree-sitter-python>=0.25.0
+pylint>=3.3.8
+rope>=1.14.0
+
+# Phase 3 authentication and security
+PyJWT>=2.8.0
+cryptography>=41.0.7
+
+# Phase 3 database and caching
+aiosqlite>=0.19.0
+sqlalchemy>=2.0.23
+redis>=5.0.1
+aioredis>=2.0.1
+
+# Phase 3 monitoring and web framework
+prometheus-client>=0.19.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+
 # Development dependencies
 pytest>=7.0.0
 pytest-cov>=4.0.0
@@ -19,8 +43,10 @@ pytest-asyncio>=0.21.0
 mypy>=1.0.0
 ruff>=0.1.0
 black>=23.0.0
-pre-commit>=3.0.0
 types-requests>=2.25.0
 types-PyYAML>=6.0.0
 bandit>=1.7.0
-safety>=2.3.0
+
+# Note: pre-commit and safety are optional for development
+# pre-commit>=3.0.0
+# safety>=2.3.0
