feat(cli): production-ready command-line interface
- Complete CLI with Click framework for all AI/ML leviathan systems
- Commands: query, ollama (list/pull/benchmark/optimize), rlhf (train/generate-data)
- System management: init, status, health, optimize, version
- Rich console output with progress bars and formatted tables
- Comprehensive CLI guide with examples and best practices
- Setup.py for proper package installation with console_scripts entry point
- Support for all ensemble methods, model management, and RLHF tuning

The leviathan now has a powerful CLI interface! 🐉⚡

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,11 @@ peft>=0.7.0
 transformers>=4.35.0
 pydantic>=2.0.0
 ollama>=0.1.7
+datasets>=2.0.0
+numpy>=1.21.0
+
+# CLI dependencies
+click>=8.0.0
 
 # Development dependencies
 pytest>=7.0.0
