feat(cli): Enhance CLI dependencies and scaffolding for agentic terminal
- Add advanced CLI libraries: typer, rich, and tenacity
- Update click library to latest version (8.1.7)
- Create initial scaffolding for agentic_cli.py
- Improve terminal interaction and command-line experience
- Prepare infrastructure for robust command-line interface development

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,8 +44,11 @@ ollama>=0.1.7
 datasets>=2.0.0
 numpy>=1.21.0
 
-# CLI dependencies
-click>=8.0.0
+# CLI dependencies - AGENTIC TERMINAL EMPIRE
+click>=8.1.7
+typer>=0.12.5
+rich>=13.7.1
+tenacity>=8.0.0
 
 # Development dependencies
 pytest>=7.0.0
