--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,10 @@ tomli-w>=1.0.0
 aiofiles>=23.0.0
 aiohttp>=3.8.0
 
+# Phase 3.4 TUI dependencies
+textual>=0.70.0
+textual-dev>=1.5.0
+
 # Phase 3 dependencies for multi-modal processing
 PyMuPDF>=1.26.5
 python-docx>=1.2.0
