--- a/requirements.txt
+++ b/requirements.txt
@@ -2,56 +2,41 @@
 requests>=2.25.0
 rich>=13.0.0
 prompt_toolkit>=3.0.0
+aiohttp>=3.9.0
 
 # Phase 2 dependencies
 psutil>=5.9.0
 PyYAML>=6.0.0
-tomli>=2.0.0; python_version < "3.11"
-tomli-w>=1.0.0
-aiofiles>=23.0.0
-aiohttp>=3.8.0
-
-# Phase 3.4 TUI dependencies
-textual>=0.70.0
-textual-dev>=1.5.0
-
-# Phase 3 dependencies for multi-modal processing
-PyMuPDF>=1.26.5
-python-docx>=1.2.0
-beautifulsoup4>=4.14.2
-tree-sitter>=0.25.2
 tree-sitter-python>=0.25.0
 pylint>=3.3.8
 rope>=1.14.0
+
+# TUI (Phase 3.4)
+textual>=0.70.0
+textual-dev>=1.5.0
 
 # Phase 3 authentication and security
 PyJWT>=2.8.0
 cryptography>=41.0.7
 
 # Phase 3 database and caching
-aiosqlite>=0.19.0
-sqlalchemy>=2.0.23
-redis>=5.0.1
-aioredis>=2.0.1
-
-# Phase 3 monitoring and web framework
-prometheus-client>=0.19.0
-fastapi>=0.104.1
-uvicorn>=0.24.0
-
-# AI/ML Phase 6 dependencies
-torch>=2.0.0
-peft>=0.7.0
-transformers>=4.35.0
-pydantic>=2.0.0
 ollama>=0.1.7
 datasets>=2.0.0
 numpy>=1.21.0
 
+# Collaboration (Phase 3.5)
+fastapi>=0.109.0
+uvicorn>=0.27.0
+websockets>=12.0
+python-multipart>=0.0.9
+sqlalchemy>=2.0.0
+
+# Git Integration (Phase 4.1)
+GitPython>=3.1.40
+
 # CLI dependencies - AGENTIC TERMINAL EMPIRE
 click>=8.1.7
 typer>=0.12.5
-rich>=13.7.1
 tenacity>=8.0.0
 
 # Development dependencies
