--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,10 @@ GitPython>=3.1.40
 click>=8.1.7
 typer>=0.12.5
 tenacity>=8.0.0
+langchain>=0.3.0
+langchain-community>=0.3.0
+langchain-ollama>=0.2.0
+duckduckgo-search>=4.0.0
 
 # Development dependencies
 pytest>=7.0.0
