--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ cryptography>=41.0.7
 ollama>=0.1.7
 datasets>=2.0.0
 numpy>=1.21.0
+chromadb>=0.4.0
 
 # Collaboration (Phase 3.5)
 fastapi>=0.109.0
