--- a/bytebot/helm/charts/postgresql/values.yaml
+++ b/bytebot/helm/charts/postgresql/values.yaml
@@ -37,7 +37,7 @@ affinity: {}
 
 auth:
   username: postgres
-  password: postgres
+  password: "${POSTGRES_PASSWORD}"
   database: bytebotdb
 
 config:
