--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
       - "8000:8000"
     environment:
       - XENCODE_ENV=production
-      - DATABASE_URL=postgresql://xencode:xencode123@postgres:5432/xencode
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-xencode}:${POSTGRES_PASSWORD}@postgres:5432/xencode
       - REDIS_URL=redis://redis:6379/0
-      - JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - LOG_LEVEL=INFO
     depends_on:
       - postgres
@@ -39,7 +39,7 @@ services:
     environment:
       - POSTGRES_DB=xencode
       - POSTGRES_USER=xencode
-      - POSTGRES_PASSWORD=xencode123
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --lc-collate=C --lc-ctype=C
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -59,7 +59,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: xencode-redis
-    command: redis-server --appendonly yes --requirepass redis123
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     volumes:
       - redis_data:/data
     ports:
@@ -117,7 +117,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin123
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana_data:/var/lib/grafana
